--- a/.github/workflows/temp‑api.yml
+++ b/.github/workflows/temp‑api.yml
@@ -29,9 +29,13 @@ jobs:
           from flask_socketio import SocketIO, send
           import threading, time
 
-          app = Flask(__name__, static_folder='static')
-          # force eventlet async
-          socketio = SocketIO(app, cors_allowed_origins='*', async_mode='eventlet')
+          app = Flask(__name__, static_folder='static', static_url_path='')
+          socketio = SocketIO(
+              app,
+              cors_allowed_origins='*',
+              serve_client=True,
+              async_mode='eventlet'
+          )
 
           @app.route('/')
           def index():
@@ -50,7 +54,6 @@ jobs:
           @socketio.on('message')
           def chat(msg):
               app.logger.info(f"Chat message: {msg}")
-              # broadcast to all clients
               socketio.emit('message', msg)
 
           def broadcast_logs():
@@ -65,11 +68,10 @@ jobs:
 
           if __name__ == '__main__':
               threading.Thread(target=broadcast_logs, daemon=True).start()
-              # use eventlet
               socketio.run(app, host='0.0.0.0', port=8000)
           PY
 
-          # Dashboard HTML using local client
+          # Dashboard HTML using CDN client
           cat <<'HTML' > static/index.html
           <!doctype html>
           <html lang="en">
@@ -92,13 +94,11 @@ jobs:
             <pre id="chat" style="height:200px; overflow:auto;"></pre>
             <h2>Logs</h2>
             <pre id="logs" style="height:200px; overflow:auto;"></pre>
-            <!-- load client from server -->
-            <script src="/socket.io/socket.io.js"></script>
+            <script src="https://cdn.socket.io/5.3.0/socket.io.min.js"></script>
             <script>
               document.addEventListener('DOMContentLoaded', ()=>{
                 console.log('Dashboard loaded');
-                // connect to current origin
-                const socket = io(window.location.origin, { transports: ['websocket', 'polling'] });
+                const socket = io({ transports: ['websocket'] });
                 socket.on('connect', ()=> console.log('Socket connected'));
                 socket.on('message', msg =>{
                   console.log('Received:', msg);
@@ -121,14 +121,11 @@ jobs:
 
       - name: Start API and ngrok tunnel
         run: |
-          # launch Flask + SocketIO
           nohup python api.py > api.log 2>&1 &
-          # install ngrok
           curl -s https://ngrok-agent.s3.amazonaws.com/ngrok.asc | sudo tee /etc/apt/trusted.gpg.d/ngrok.asc >/dev/null
           echo "deb https://ngrok-agent.s3.amazonaws.com buster main" | sudo tee /etc/apt/sources.list.d/ngrok.list
           sudo apt update && sudo apt install -y ngrok
           ngrok config add-authtoken "$NGROK_TOKEN"
-          # start tunnel
           nohup ngrok http 8000 --log=stdout > ngrok.log 2>&1 &
           sleep 5
           echo "🚀 Public URL: $(curl --silent http://localhost:4040/api/tunnels | jq -r '.tunnels[0].public_url')"
