--- a/.github/workflows/temp‑api.yml
+++ b/.github/workflows/temp‑api.yml
@@ -311,6 +311,7 @@ jobs:
                 gap: 1px;
                 background: var(--border-color);
                 overflow: hidden;
+                min-height: 0; /* Critical for proper flex behavior */
               }
 
               .panel {
@@ -318,6 +319,8 @@ jobs:
                 display: flex;
                 flex-direction: column;
                 position: relative;
+                height: 100%;
+                min-height: 0; /* Important for flex containers */
               }
 
               .panel-header {
@@ -329,6 +332,7 @@ jobs:
                 letter-spacing: 0.05em;
                 color: var(--text-secondary);
                 border-bottom: 1px solid var(--border-color);
+                flex-shrink: 0; /* Prevent header from shrinking */
               }
 
               /* Chat Panel */
@@ -342,6 +346,7 @@ jobs:
                 gap: 1rem;
                 scroll-behavior: smooth;
                 min-width: 0; /* Prevents flex item from overflowing */
+                min-height: 0; /* Critical for scrolling in flex containers */
               }
 
               .chat-messages::-webkit-scrollbar {
@@ -426,6 +431,7 @@ jobs:
                 padding: 1.5rem;
                 background: var(--bg-tertiary);
                 border-top: 1px solid var(--border-color);
+                flex-shrink: 0; /* Prevent input area from shrinking */
               }
 
               .message-form {
@@ -493,11 +499,13 @@ jobs:
               .logs-container {
                 flex: 1;
                 overflow-y: auto;
+                overflow-x: hidden;
                 padding: 1rem;
                 font-family: 'Monaco', 'Menlo', 'Ubuntu Mono', monospace;
                 font-size: 0.8125rem;
                 line-height: 1.4;
                 background: #0d1117;
+                min-height: 0; /* Critical for scrolling in flex containers */
               }
 
               .logs-container::-webkit-scrollbar {
