--- a/.github/workflows/voice-chat-workflow.yml
+++ b/.github/workflows/voice-chat-workflow.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install flask==3.0.3 flask-socketio==5.3.6 eventlet==0.35.2
+          pip install flask==3.0.3 flask-socketio==5.3.6 eventlet==0.35.2 gunicorn==22.0.0
 
       - name: Start signaling server
         run: |
