--- a/.github/workflows/voice-chat-workflow.yml
+++ b/.github/workflows/voice-chat-workflow.yml
@@ -37,10 +37,13 @@ jobs:
 
       - name: Install ngrok
         run: |
-          curl -s https://ngrok-agent.s3.amazonaws.com/ngrok.asc | sudo tee /etc/apt/trusted.gpg.d/ngrok.asc >/dev/null
-          echo "deb https://ngrok-agent.s3.amazonaws.com buster main" | sudo tee /etc/apt/sources.list.d/ngrok.list
-          sudo apt-get update -y
-          sudo apt-get install -y ngrok
+          # Download the latest ngrok binary
+          curl -sLO https://bin.equinox.io/c/bNyj1mQVY4c/ngrok-v3-stable-linux-amd64.tgz
+          # Extract it to /usr/local/bin which is in the PATH
+          sudo tar xvzf ngrok-v3-stable-linux-amd64.tgz -C /usr/local/bin
+          # Verify installation
+          ngrok version
+          # Add authtoken
           ngrok config add-authtoken "$NGROK_TOKEN"
 
       - name: Start ngrok tunnel without warning page
