--- a/.github/workflows/ngrok.yml
+++ b/.github/workflows/ngrok.yml
@@ -14,14 +14,14 @@ jobs:
         with:
           node-version: 18
 
-      - name: Install deps
+      - name: Install dependencies
         run: npm install
 
       - name: Start server
         run: |
           nohup node server.js > server.log 2>&1 &
           sleep 2
-          echo "Server started on port 3000 (if no errors in server.log)."
+          echo "Server started on port 3000 (check server.log for errors)."
 
       - name: Install utilities
         run: |
@@ -31,7 +31,7 @@ jobs:
       - name: Download & install ngrok v3
         run: |
           echo "Downloading official ngrok v3 binary..."
-          # x86_64 binary. If you need arm64, change filename to ngrok-v3-stable-linux-arm64.tgz
+          # For x86_64 runners (default). If your runner is arm64, replace filename accordingly.
           wget -q -O ngrok-v3.tgz "https://bin.equinox.io/c/bNyj1mQVY4c/ngrok-v3-stable-linux-amd64.tgz"
           sudo tar -xzf ngrok-v3.tgz -C /usr/local/bin
           sudo chmod +x /usr/local/bin/ngrok
@@ -43,11 +43,9 @@ jobs:
         env:
           NGROK_TOKEN: ${{ secrets.NGROK_TOKEN }}
         run: |
-          # start ngrok in background
           /usr/local/bin/ngrok http 3000 --authtoken="$NGROK_TOKEN" --log=stdout > ngrok.log 2>&1 &
           echo "ngrok started, waiting for API..."
 
-          # wait and poll the local ngrok API for up to 30 seconds
           URL=""
           for i in $(seq 1 30); do
             sleep 1
@@ -60,10 +58,9 @@ jobs:
             fi
           done
 
-          # fallback: try to extract URL directly from ngrok.log
           if [ -z "$URL" ]; then
             echo "API returned empty or invalid JSON; trying ngrok.log fallback..."
-            URL=$(grep -oE 'https?://[a-z0-9.-]+\.ngrok.io' ngrok.log | head -n1 || true)
+            URL=$(grep -oE 'https?://[a-z0-9.-]+\.ngrok(io|free.app|app)' ngrok.log | head -n1 || true)
           fi
 
           if [ -z "$URL" ]; then
@@ -83,3 +80,9 @@ jobs:
           echo "Public URL: ${{ steps.start_ngrok.outputs.ngrok_url }}"
           echo "Username: ${{ secrets.NGROK_APP_USERNAME }}"
           echo "Password: ${{ secrets.NGROK_APP_PASSWORD }}"
+
+      - name: Keep workflow running until cancelled
+        run: |
+          echo "Workflow will keep running and ngrok will stay active until you CANCEL this run in the Actions UI."
+          echo "To stop the tunnel: Actions → this workflow run → Cancel workflow."
+          sleep infinity
